# MathModelling

./: .gitignore  LICENSE  README  README.md  main.py  pyproject.toml
Data/data_loader/: log_returns_scaled_descriptive_statistics.csv
Data/garch_engine/: garch_summary.txt
Study/: Draft of Exposition Paper.tex  reference.bib
Values_at_Risk_predictor/: GARCH_Engine.py  backtest.py  data_loader.py
notebook/: main.ipynb
notebook/.ipynb_checkpoints/: main-checkpoint.ipynb
